--- a/recipes/styles/recipe.css
+++ b/recipes/styles/recipe.css
@@ -3,14 +3,21 @@
     color: indigo;
 }
 
-.center-aligned {
-    text-align: center;
+body {
+    width: 700px;
+    margin: 0 auto;
+    background-color: aliceblue;
 }
 
-.center-image {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+div {
+    background-color: skyblue;
+    padding: 0 20px 10px;
+}
+
+img {
+    height: auto;
+    width: 660px;
+    margin: 10px auto;
 }
 
 p,
@@ -24,17 +31,14 @@ a {
 }
 
 h1 {
+    margin: 0 auto 10px;
     color: skyblue;
     background-color: black;
+    text-align: center;
 }
 
 h2 {
-    color: cadetblue;
-}
-
-img {
-    height: auto;
-    width: 500px;
+    color: blue;
 }
 
 strong {
