--- a/recipes/styles/recipe.css
+++ b/recipes/styles/recipe.css
@@ -3,8 +3,13 @@
     color: indigo;
 }
 
-body {
+body,
+div,
+img {
     width: 700px;
+}
+
+body {
     margin: 0 auto;
     background-color: aliceblue;
 }
@@ -16,7 +21,6 @@ div {
 
 img {
     height: auto;
-    width: 660px;
     margin: 10px auto;
 }
 
