--- a/todo/style/styles.css
+++ b/todo/style/styles.css
@@ -4,9 +4,17 @@
 }
 
 button {
-    font-size: 28px;
+    font-size: 32px;
     letter-spacing: 2px;
-    line-height: 28px;
+    line-height: 32px;
+}
+
+button:hover {
+    filter: brightness(80%);
+}
+
+button:active {
+    filter: brightness(95%);
 }
 
 body {
@@ -34,6 +42,8 @@ h3 {
 input {
     min-width: 0;
     font-size: 24px;
+    border: 2px gray solid;
+    border-radius: 4px;
 }
 
 ul {
@@ -50,22 +60,21 @@ li {
     border: 0px;
     border-bottom: 2px;
     border-color: lightgray;
-    border-style: solid;
+    border-style: groove;
 }
 
 .remove {
     align-self: flex-start;
     text-align: center;
-    background-color: orangered;
-    color: white;
-    border: white 1px solid;
-    border-radius: 50%;
+    background-color: transparent;
+    color: orangered;
+    border: 0px;
 }
 
 .add {
     text-align: center;
-    background-color: limegreen;
-    color: white;
+    background-color: transparent;
+    color: limegreen;
     border: 0px;
 }
 
