--- a/todo/style/styles.css
+++ b/todo/style/styles.css
@@ -25,6 +25,7 @@ body {
 
 h3 {
     text-align: center;
+    color: darkorange;
 }
 
 .container {
@@ -65,7 +66,7 @@ li {
 }
 
 li span {
-    color: rebeccapurple;
+    color: blue;
     word-wrap: break-word;
     max-width: 90%;
 }
@@ -96,8 +97,12 @@ li span {
 }
 
 .numeration {
-    font-size: 24px;
+    font-size: 28px;
     background-color: transparent;
     color: darkorange;
     border: 0px;
+}
+
+.selected {
+    color: red;
 }
