--- a/recipes/styles/recipe.css
+++ b/recipes/styles/recipe.css
@@ -1,3 +1,4 @@
+
 body {
     display: flex;
     flex-flow: row nowrap;
@@ -13,12 +14,19 @@ img {
     height: auto;
 }
 
-.links ul,
-.links h2 {
+.links .wrapper {
     padding-left: 16px;
+    padding-top: 24px;
+    position: sticky;
+    top: 0;
+}
+
+.links h2 {
+    margin-top: 0px;
 }
 
 .links ul {
+    padding: 0px;
     font-size: 24px;
     list-style-type: none;
     display: flex;
@@ -34,3 +42,16 @@ img {
     margin-bottom: 4px;
 }
 
+@media screen and (max-width : 760px) {
+    body {
+        flex-flow: column nowrap;
+        gap: 0px;
+        padding: 16px;
+        padding-top: 0px;
+    }
+
+    .links ul,
+    .links h2 {
+        padding-left: 0px;
+    }
+}
