--- a/admin-dashboard/styles.css
+++ b/admin-dashboard/styles.css
@@ -1,198 +1,58 @@
-:root {
-    --main-color: rgb(122, 53, 250);
-    --second-color: rgb(29, 158, 190);
-    --gray-color: rgba(214, 214, 214, 0.835);
-
-    font-size: 20px;
+body {
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 350px 1fr;
+    grid-template-rows: 250px 1fr;
 }
 
 * {
-    padding: 0px;
     margin: 0px;
-}
+    padding: 0px;
+    box-sizing: border-box;
 
-.wrapper {
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 5fr;
 }
 
 .sidebar {
-    background-color: var(--main-color);
-    color: white;
-    padding: 32px;
-    padding-left: 48px;
+    grid-row: 1/3;
     display: flex;
     flex-flow: column nowrap;
-    align-items: flex-start;
-    gap: 32px;
+    gap: 48px;
+    padding: 24px;
+    background-color: rgb(31, 139, 255);
+    z-index: 2;
 }
 
-.sidebar ul {
-    list-style: none;
+.sidebar .section {
+    display: flex;
+    flex-flow: column nowrap;
 }
 
-.sidebar li {
-    padding: 4px;
-    border-radius: 4px;
-    margin-bottom: 8px;
-    font-size: 1.2rem;
+.sidebar .section>div,
+.sidebar .logo {
+    padding: 12px;
+    font-size: 26px;
+    color: white;
+    font-weight: bold;
 }
 
-.sidebar li:hover {
+.sidebar .section>div:hover,
+.sidebar .logo:hover {
     background-color: white;
-    color: var(--main-color);
+    color: black;
     cursor: pointer;
 }
 
-.content {
-    display: flex;
-    flex-flow: column nowrap;
+.sidebar .logo {
+    font-size: 32px;
 }
 
-.search-bar,
-.nav-bar {
-    display: flex;
-    justify-content: space-between;
-    padding: 16px 32px;
+.header {
+    z-index: 1;
+    box-shadow: 0 2px 6px gray;
 }
 
-.search-bar input {
-    background-color: var(--gray-color);
-    font-size: 1.1rem;
-    border: 0px;
-    border-radius: 8px;
-    padding: 4px;
-    outline: none;
-}
 
-.search-bar input:focus {
-    outline: 3px solid var(--second-color);
-}
-
-.search-bar > div > span,
-.nav-bar > .greeting > .big {
-    font-weight: bold;
-    font-size: 1.1rem;
-}
-
-.notifs {
-    display: flex;
-    gap: 32px;
-}
-
-.greeting {
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 4px;
-}
-
-.greeting .small {
-    font-weight: bold;
-    font-size: 0.8rem;
-}
-
-.nav-buttons button {
-    font-size: 1.2rem;
-    padding: 8px;
-    border-radius: 4px;
-    border: 0px;
-    background-color: var(--main-color);
-    color: white;
-}
-
-.nav-buttons button:hover {
-    background-color: white;
-    color: var(--main-color);
-    outline: 3px solid var(--main-color);
-}
-
-.nav-buttons {
-    display: flex;
-    gap: 32px;
-}
-
-.nav-bar {
-    border-bottom: 3px groove var(--gray-colors);
-}
-
-.main-area {
-    background-color: var(--gray-color);
-    padding: 32px;
-    padding-top: 64px;
-    display: grid;
-    grid-template-columns: 4fr 1fr;
-    grid-template-rows: 0.8fr 0.8fr;
-    gap: 64px 32px;
-}
-
-.title {
-    position: absolute;
-    top: -40px;
-}
-
-.announcements > .title,
-.trending > .title {
-    left: 0%;
-}
-
-.projects {
-    position: relative;
-    grid-row: span 2;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    gap: 32px;
-}
-
-.card {
-    position: relative;
-    background-color: white;
-    padding: 16px 32px 32px 16px;
-    border-radius: 8px;
-    border-left: 5px solid var(--second-color);
-}
-
-.card > p {
-    font-size: 0.9rem;
-}
-
-.card::after {
-    content: "⭐ 👁 🔌";
-    letter-spacing: 0.2rem;
-    position: absolute;
-    bottom: 5%;
-    right: 3%;
-}
-
-.announcements,
-.trending {
-    position: relative;
-    display: flex;
-    flex-flow: column wrap;
-    gap: 16px;
-    justify-content: space-between;
-    background-color: white;
-    padding: 32px;
-    border-radius: 8px;
-    min-width: 250px;
-}
-
-.delimiter {
-    border-bottom: 1px groove lightgray;
-}
-
-.announce > p,
-.user > p  {
-    font-size: 0.8rem;
-}
-
-.user,
-.announce {
-    display: flex;
-    flex-flow: column nowrap;
-    row-gap: 8px;
-}
-
-.tag {
-    color: var(--second-color);
+.main-container {
+    background-color: rgb(232, 232, 232);
 }
