--- a/admin-dashboard/styles.css
+++ b/admin-dashboard/styles.css
@@ -54,7 +54,7 @@ body {
 
 .header {
     z-index: 1;
-    box-shadow: 0 2px 6px gray;
+    box-shadow: 0 2px 6px darkgray;
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 2fr;
@@ -153,4 +153,50 @@ body {
 
 .main-container {
     background-color: var(--background-color);
+    display: grid;
+    grid-template-columns: 1fr 350px;
+    grid-template-rows: 1fr 1fr;
+    gap: 32px;
+    padding: 24px;
+    overflow: scroll;
+}
+
+.main-container .projects {
+    grid-row: 1/3;
+}
+
+.main-container .title {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 8px;
+}
+
+.main-container .announcements .content {
+    background-color: white;
+    display: flex;
+    flex-flow: column nowrap;
+    padding: 32px;
+    gap: 32px;
+    border-radius: 12px;
+    box-shadow: 2px 2px 6px darkgray;
+}
+
+.main-container .announcements .content>div {
+    padding-bottom: 32px;
+    border-bottom: 1px solid darkgray;
+}
+
+.main-container .announcements .content>div:last-child {
+    padding-bottom: 0px;
+    border: 0;
+}
+
+.main-container .announcements .content .topic {
+    font-weight: bold;
+    margin-bottom: 4px;
+    font-size: 18px;
+}
+
+.main-container .announcements .content .text {
+    color: rgb(77, 77, 77);
 }
