--- a/todo/src/styles.css
+++ b/todo/src/styles.css
@@ -72,6 +72,7 @@ header {
     font-size: 1.6rem;
 }
 
+
 .project,
 .todo {
     box-shadow: 2px 2px 6px gray;
@@ -164,6 +165,8 @@ button.add {
     bottom: 0;
     right: 0;
     margin: 24px;
+    padding: 12px;
+    font-size: 1.6rem;
     background-color: var(--theme-color);
     border: 2px solid var(--theme-color);
     color: white;
