Add a priority system, show level of priority with colors

--- a/todo/src/styles.css
+++ b/todo/src/styles.css
@@ -125,6 +125,8 @@ header {
     gap: 8px;
     align-items: center;
     margin: 0px 16px;
+
+    border-left: 12px solid black;
 }
 
 .todo #done-check {
