First working version of the app

--- a/weather-app/src/styles.css
+++ b/weather-app/src/styles.css
@@ -124,6 +124,11 @@ main .container .hourly {
 
 main .container .brief {
     align-self: center;
+    height: 300px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center
 }
 
 main .brief .degrees {
