Dont show empty main on load

--- a/weather-app/src/styles.css
+++ b/weather-app/src/styles.css
@@ -91,6 +91,7 @@ header .degree-select>label:has(input[type="radio"]:checked) {
 main {
     display: flex;
     justify-content: center;
+    display: none;
 }
 
 main .container {
