--- a/1_landing-page/src/style.css
+++ b/1_landing-page/src/style.css
@@ -1,12 +1,16 @@
-blockquote {
-    margin: 4rem 0;
-    border-left-color: var(--pico-color-azure-600)
-}
-
-.center {
+.text-center {
     text-align: center;
 }
 
-.action>* {
+.mtb-4r {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+}
+
+.mb-0 {
     margin-bottom: 0;
+}
+
+.border-left-azure-600 {
+    border-left-color: var(--pico-color-azure-600);
 }
